html/css/main.css
/* ... */
/* Phone Application Container END */
/* -------------------------- */

/* Phone Footer */
.phone-footer {
    transition: 100ms all ease-in-out;
    bottom: -10px;
    position: absolute;
    height: 2.6vh;
    width: 100%;
}

.phone-home-container {
    position: relative;
    height: 2.3vh;
    width: 50%;
    /* background-color: rgba(0, 0, 0, 0.3); */
    margin: 0 auto;
    top: 2vh;
    transform: translateY(-50%);
    border-radius: 0.8vh;
    transition: .15s;
    z-index: 500;
    opacity: 0.8;
}

.phone-home-container:hover {
    /* background-color: rgba(0, 0, 0, 0.45); */
    opacity: 1.0;
}

.phone-home-container:hover 
.phone-home-button {
    background-color: rgba(255, 255, 255, 0.95);
}

.phone-home-button {
    position: relative;
    height: 0.5vh;
    width: 70%;
    background-color: rgba(255, 255, 255, 0.75);
    border-radius: 0.8vh;
    top: 50%;
    transform: translateY(-50%);
    margin: 0 auto;
    transition: .1s;
}

/* Phone Footer END */

/* Home Applications */
.phone-applications {
    position: relative;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0);
}

.phone-application {
    position: relative;
    display: flex;
    height: 4.6vh;
    width: 4.6vh;
    left: 0.5vh;
    float: left;
    margin-left: 2vh;
    margin-top: 2.5vh;
    border-radius: 0.8vh;
    text-align: center;
    opacity: 0.9;
    transition: .05s;
}

.phone-application:hover {
    opacity: 1.0;
}

.phone-footer-applications {
    position: absolute;
    bottom: 0.6vh;
    background: #ffffff30;
    border-radius: 20px;
    width: 92%;
    right: 50%;
    transform: translate(50%, 0px);
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 16px;
}

.phone-home-applications {
    position: absolute;
    width: 100%;
    top: 3vh;
    display: flex;
    flex-flow: wrap;
    flex-direction: row;
}

.phone-application > i {
    line-height: 4.6vh;
    font-size: 2vh;
}

.ApplicationIcon {
    border-radius: 12px;
    color: white;
}

.application-description {
    position: absolute;
    top: 94%;
    color: white;
    overflow: hidden;
    white-space: nowrap;
    position: absolute;
    left: 50%;
    transform: translate(-48%, 4px);
    /* text-overflow: ellipsis; */
    font-size: 12px;
    font-family: 'SF Pro Display Light';
}
/* Home Applications END */


/* Phone Notification */

.phone-notification-container {
    position: absolute;
    display: flex;
    flex-direction: column;
    height: fit-content;
    padding: 8px 12px;
    width: 90%;
    margin: 0 auto;
    left: 0;
    right: 0;
    top: -8%;
    border-radius: 1vh;
    overflow: hidden;
    z-index: 140;
    box-shadow: 0 0 20px 7px rgb(0 0 0 / 65%);
    background-color: rgba(39, 39, 39, 0.6);
}

.phone-notification-info-bar {
    display: flex;
    align-items: center;
    justify-content: space-between;
    color: var(--border-gray);
    font-size: 12px;
}

.notification-icon {
    text-align: center;
    font-size: 16px;
    color: var(--border-gray);
}

.notification-title {
    flex: 1;
    letter-spacing: 0.4px;
    text-transform: uppercase;
    margin-left: 6px;
    font-family: 'SF Pro Display Light';
    color: var(--border-gray);
}

.notification-text {
    font-family: 'SF Pro Display Light';
    overflow: hidden;
    font-size: 14px;
    letter-spacing: 0.2px;
    margin-top: 6px;
    color: var(--main-background-color);
}

.notification-time {
    font-family: 'SF Pro Display Light';
}

.phone-notification-blur {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    backdrop-filter: blur(12px);
    z-index: -1;
    background: rgb(255, 255, 255, 0.09);
}

/* Phone Notification END */

.call-notifications {
    display: none;
    position: absolute;
    background: #e67d22ea;
    height: 9vh;
    width: 34vh;
    bottom: 16vh;
    right: -35vh;
    border-radius: 1.7vh;
    z-index: -5;
}
.call-notifications-shake {
    /* Start the shake animation and make the animation last for 0.5 seconds */
    animation: shake 0.5s;
  
    /* When the animation is finished, start again */
    animation-iteration-count: infinite;
}
  
@keyframes shake {
    0% { transform: translate(1px, 1px) rotate(0deg); }
    10% { transform: translate(-1px, -2px) rotate(-1deg); }
    20% { transform: translate(-3px, 0px) rotate(1deg); }
    30% { transform: translate(3px, 2px) rotate(0deg); }
    40% { transform: translate(1px, -1px) rotate(1deg); }
    50% { transform: translate(-1px, 2px) rotate(-1deg); }
    60% { transform: translate(-3px, 1px) rotate(0deg); }
    70% { transform: translate(3px, 1px) rotate(-1deg); }
    80% { transform: translate(-1px, -1px) rotate(1deg); }
    90% { transform: translate(1px, 2px) rotate(0deg); }
    100% { transform: translate(1px, -2px) rotate(-1deg); }
}

.screen-notifications-container {
    display: none;
    position: absolute;
    background: rgba(29, 160, 242, 0.9);
    height: 9vh;
    width: 34vh;
    bottom: 5vh;
    right: -35vh;
    border-radius: 1.7vh;
    z-index: -5;
}

.screen-notification-icon {
    position: absolute;
    line-height: 9.3vh;
    left: 2vh;
    font-size: 3.75vh;
    color: white;
}

.screen-notification-title {
    position: absolute;
    line-height: 5.5vh;
    left: 7.5vh;
    font-size: 1.5vh;
    color: white;
    font-family: 'SF Pro Display Regular';
}

.screen-notification-content {
    position: absolute;
    top: 4.2vh;
    left: 7.5vh;
    font-size: 1.2vh;
    color: white;
    font-family: 'SF Pro Display Light';
    height: 3.5vh;
    width: 26vh;
    overflow: hidden;
}

.call-notifications-icon {
    position: absolute;
    line-height: 9.3vh;
    left: 2vh;
    font-size: 3.75vh;
    color: white;
    transform: rotate(90deg);
}

.call-notifications-title {
    position: absolute;
    line-height: 5.5vh;
    left: 7.5vh;
    font-size: 1.5vh;
    color: white;
    font-family: 'SF Pro Display Regular';
}
/* ... */

